[gd_scene load_steps=8 format=3 uid="uid://j8qu5b2eeivv"]

[ext_resource type="Texture2D" uid="uid://bhm3e7bsf0nbq" path="res://Assets/Sprites/button_yellow_pressed.png" id="1_cqq8q"]
[ext_resource type="Script" uid="uid://diqikip8gw8wk" path="res://scenes/button_yellow.gd" id="1_tnlv3"]
[ext_resource type="Texture2D" uid="uid://cfkhbjq6j4a2e" path="res://Assets/Sprites/button_yellow.png" id="2_tnlv3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_auofo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_cqq8q")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tnlv3")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ob3ke"]
height = 208.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eox6g"]
radius = 18.0
height = 136.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_auofo"]
size = Vector2(102, 20)

[node name="Yellow Button" type="StaticBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_tnlv3")

[node name="yellow_sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_auofo")
animation = &"up"

[node name="collider_base" type="CollisionShape2D" parent="."]
position = Vector2(-3, 109)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ob3ke")

[node name="yellow_collider_top" type="CollisionShape2D" parent="."]
position = Vector2(-5, 26)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_eox6g")

[node name="yellow checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="yellow checker"]
position = Vector2(-2, -21)
shape = SubResource("RectangleShape2D_auofo")

[connection signal="body_entered" from="yellow checker" to="." method="_on_yellow_checker_body_entered"]
[connection signal="body_exited" from="yellow checker" to="." method="_on_yellow_checker_body_exited"]
